--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -143,18 +143,10 @@ td.maiusculo{
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   
-
-<!-- LINHAS INSERIDAS PARA USAR MODAL DE ESTADO CIVIL -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-
-
-
 {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> {% endcomment %}
 <script type="text/javascript" src="{% static 'bootstrap/js/masks.js' %}"></script>
 <script type="text/javascript" src="{% static 'bootstrap/js/jquery.mask.min.js' %}"></script>
-<script src="{% static 'bootstrap/js/jquery.bootstrap.modal.forms.js' %}"></script>
+{% comment %} <script src="{% static 'bootstrap/js/jquery.bootstrap.modal.forms.js' %}"></script> {% endcomment %}
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
 <script src="https://raw.githubusercontent.com/igorescobar/jQuery-Mask-Plugin/master/src/jquery.mask.js"></script>
 
