impressão de cliente cnpj(em andamento)

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
@@ -9,9 +9,8 @@
     .no-print, .no-print *
     {
         display: none !important;
-    }
-}
-
+    }    
+}   
 </style>
 
 <span class="pull-right">
@@ -202,6 +201,69 @@
         <div class="form-group">
             <label>CPF</label>
             <input type="text" value="{{ object.rep_cpf }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>RG</label>
+            <input type="text" value="{{ object.rep_rg }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Orgão Emissor</label>
+            <input type="text" value="{{ object.rep_orgao_emissor }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Data de Nascimento</label>
+            <input type="text" value="{{ object.rep_data_nasc }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Naturalidade</label>
+            <input type="text" value="{{ object.rep_naturalidade }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Nacionalidade</label>
+            <input type="text" value="{{ object.rep_nacionalidade }}" readonly class="form-control">
+        </div>
+    </div>
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Estado Civil</label>
+            <input type="text" value="{{ object.rep_estado_civil }}" readonly class="form-control">
+        </div>
+    </div>
+    {% if object.rep_estado_civil == 'casado' %}
+        <div class="col-sm-6"> 
+            <div class="form-group">
+                <label>Nome Cônjuge</label>
+                <input type="text" value="{{ object.rep_conjuge_nome }}" readonly class="form-control">
+            </div>
+        </div>
+        <div class="col-sm-6"> 
+            <div class="form-group">
+                <label>CPF Cônjuge</label>
+                <input type="text" value="{{ object.rep_conjuge_cpf }}" readonly class="form-control">
+            </div>
+        </div>
+        <div class="col-sm-6"> 
+            <div class="form-group">
+                <label>Tel Fixo</label>
+                <input type="text" value="{{ object.rep_conjuge_telefone }}" readonly class="form-control">
+            </div>
+        </div>    
+    {% endif %}
+    
+    <div class="col-sm-6"> 
+        <div class="form-group">
+            <label>Estado Civil</label>
+            <input type="text" value="{{ object.rep_estado_civil }}" readonly class="form-control">
         </div>
     </div>
 
