nome fantasia é opcional

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -37,7 +37,7 @@
         </div>    
         <div class="col-sm-6">                    
             <div class="form-group" >                
-                <label for="" class="required" >{{form.nome_fantasia.label}} </label>        
+                <label for="" >{{form.nome_fantasia.label}} </label>        
                 {% render_field form.nome_fantasia class="form-control" %}
             </div>
         </div>        
