--- a/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
@@ -10,7 +10,22 @@
     {
         display: none !important;
     }    
-}   
+    @page {
+        margin: 0.5cm;
+    }    
+    label {
+        font-size: 10pt;        
+    }
+    input.form-control{
+        font-size: 10pt;  
+        width: 450px;
+        height: 30px;
+        border: none;
+    }
+    
+}  
+
+
 </style>
 
 <span class="pull-right">
@@ -25,7 +40,7 @@
     <div class="col-sm-6"> 
         <div class="form-group">
             <label>Razão Social</label>
-            <input  value="{{ object.razao_social }}" readonly class="form-control">
+            <input  value="{{ object.razao_social }}" readonly class="form-control input">
         </div>
     </div>
     <div class="col-sm-6"> 
@@ -189,7 +204,11 @@
         </div>
     </div>
 </div>
-<h2> REPRESENTANTE </h2>
+<div class="row">
+    <div class="col-sm-6">
+        <h2> REPRESENTANTE </h2><br>
+    </div>
+</div>
 <div class="row">
     <div class="col-sm-6"> 
         <div class="form-group">
