--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -150,19 +150,29 @@
 
     //GERA UM NUMERO SEQUENCIAL BASEADO NA DATA E HORA ATUAL
     function sequencial(){
-        var dt=new Date()          
+        var dt=new Date()      
+        // var ano = String(dt.getYear())
         var ano       = document.getElementById("dataselecionada").value.split("-")[0];
+        ano = String(ano)
+        // RETORNA APENAS OS DOIS ULTIMOS DIGITOS DO ANO
+        ano = (ano.substr(2, 3))
         var mes       = document.getElementById("dataselecionada").value.split("-")[1];
         var dia       = document.getElementById("dataselecionada").value.split("-")[2];   
         var hora      = String(dt.getHours())
-        var minutos   = String(dt.getMinutes())
+        var minutos   = String(dt.getMinutes())        
         var sequencia = ano
         var sequencia = sequencia+mes
-        if(dia<10){
+
+        // if(dia<10){
+        //     sequencia += '0'
+        // }
+        var sequencia = sequencia+dia    
+
+        if(hora<10){
             sequencia += '0'
-        }
-        var sequencia = sequencia+dia        
+        } 
         var sequencia = sequencia+hora  
+
         if(minutos<10 && minutos>0){
             sequencia += '0'
         }
