ajuste nas datas de fevereio no contrato

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -360,7 +360,7 @@ window.onload = function imprimir(){
             pactuado, mediante as condições seguintes.
             </p>
             <p class="fontmenor" >
-            <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao <b>CREDOR</b> no dia de acordo conforme tabela abaixo:
+            <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao <b>CREDOR</b> no dia de acordo conforme tabela abaixo:este
             </p>
         `
         +
@@ -384,6 +384,10 @@ window.onload = function imprimir(){
             mes++
 
             //AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+            if(dia == 1 && mes == 4){
+                dia = 30 
+                mes = 3
+            }
             if(dia == 30 && mes == 2){
                 dia = 1 
                 mes = 3
@@ -502,6 +506,10 @@ window.onload = function imprimir(){
             mes++
 
             //AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+            if(dia == 1 && mes == 4){
+                dia = 30 
+                mes = 3
+            }
             if(dia == 30 && mes == 2){
                 dia = 1 
                 mes = 3
@@ -703,6 +711,10 @@ window.onload = function imprimir(){
             mes++
 
             //AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+            if(dia == 1 && mes == 4){
+                dia = 30 
+                mes = 3
+            }
             if(dia == 30 && mes == 2){
                 dia = 1 
                 mes = 3
