ajuste nas datas de fevereio no carne e promissória

--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -312,6 +312,10 @@
 			ano  = aux_ano
 
 			//AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+			if(dia == 1 && mes == 4){
+                dia = 30 
+                mes = 3
+            }
 			if(dia == 30 && mes == 2){
 				dia = 1 
 				mes = 3
@@ -488,6 +492,10 @@
 			ano  = aux_ano
 
 			//AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+			if(dia == 1 && mes == 4){
+                dia = 30 
+                mes = 3
+            }
 			if(dia == 30 && mes == 2){
 				dia = 1 
 				mes = 3
