--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -208,6 +208,10 @@ window.onload = function imprimir_promissoria(){
     ano  = aux_ano
 
     //AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+    if(dia == 1 && mes == 4){
+        dia = 30 
+        mes = 3
+    }
     if(dia == 30 && mes == 2){
         dia = 1 
         mes = 3
