--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -229,6 +229,8 @@ window.onload = function imprimir(){
     var aux_dia = {{object.dt_emprestimo.day}}
     var aux_mes = {{object.dt_emprestimo.month}}
     var aux_ano = {{object.dt_emprestimo.year}}
+
+    var trinta_e_um = 0
     
     dia  = aux_dia
     mes  = aux_mes+contador_meses
@@ -379,9 +381,13 @@ window.onload = function imprimir(){
             </tr>
         </table >
         `
-        for(var i=0; i<{{object.qtd_parcelas}}; i++){
+        for(var i=0; i<{{object.qtd_parcelas}}; i++){            
             contador_parcela++
             mes++
+
+            if(dia == 31){
+                trinta_e_um = 31
+            }
 
             //AJUSTA A DATA QUANDO O MES É FEVEREIRO 
             if(dia == 1 && mes == 4){
@@ -392,6 +398,40 @@ window.onload = function imprimir(){
                 dia = 1 
                 mes = 3
             }
+            if(dia == 31 && mes == 2){
+                dia = 1 
+                mes = 3
+            }
+
+            // AJUSTE DE DIAS QUANDO A DATA INICIAL É DIA 31
+            if(mes == 11 && trinta_e_um == 31){
+                dia--
+            }
+            if(dia == 30 && mes == 12 && trinta_e_um == 31){
+                dia++
+            }
+            if(dia == 30 && mes == 3 && trinta_e_um == 31){
+                dia++
+            }
+            if(mes == 4 && trinta_e_um == 31){
+                dia--
+            }
+            if(mes == 5 && trinta_e_um == 31){
+                dia++
+            }
+            if(mes == 6 && trinta_e_um == 31){
+                dia--
+            }
+            if(mes == 7 && trinta_e_um == 31){
+                dia++
+            }
+            if(mes == 9 && trinta_e_um == 31){
+                dia--
+            }
+            if(mes == 10 && trinta_e_um == 31){
+                dia++
+            }
+            
             
             //AJUSTA MESES E ANOS 
             if(mes == 13){
